--- a/src/Page/SearchPage.css
+++ b/src/Page/SearchPage.css
@@ -3,7 +3,8 @@
     height: 90vh;
     background-color: yellow;
     float: left;
-
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 #rightBox{
