--- a/src/Page/SearchPage.css
+++ b/src/Page/SearchPage.css
@@ -3,7 +3,8 @@
     height: 90vh;
     background-color: yellow;
     float: left;
-
+    overflow: hidden;
+    will-change: overflow;
 }
 
 #rightBox{
@@ -15,6 +16,16 @@
 }
 
 #ListMapView{
-    overflow-x: hidden;
-    overflow-y: auto;
+    height:83vh;    
+    overflow: auto;
+}
+
+#recommend{
+    padding:1em;
+    border:solid;
+    background-color:#F0FFFF;
+}
+
+.ListMapView{
+    padding:1em;
 }
