--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,29 @@
+.button {
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
+  border-radius: 6px;
+  padding: 20px;
+}
 
+.modal-background {
+  position: absolute;
+  right: 0;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(10, 10, 10, 0.86);
+}
+
+.modal-card {
+  margin: 0 auto;
+  display: block;
+  margin-top: 250px;
+  width: 300px;
+  height: 300px;
+  background-color: lightgray;
+  border-radius: 5px;
+}
 
 
 @media (prefers-reduced-motion: no-preference) {
@@ -19,3 +44,5 @@
     transform: rotate(360deg);
   }
 }
+
+
