--- a/src/Components/Buttons/MyPageButton.css
+++ b/src/Components/Buttons/MyPageButton.css
@@ -2,4 +2,29 @@ img {
     height: 100%;
     width: 150px;
 }
-  
+
+.button {
+    display: block;
+    margin: 0%;
+    padding: 0%;
+    border-radius: 6px;
+}
+
+.modal-background {
+    position: absolute;
+    right: 0;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(10, 10, 10, 0.86);
+}
+
+.modal-card {
+    margin: 0 auto;
+    display: block;
+    margin-top: 250px;
+    width: 300px;
+    height: 300px;
+    background-color: lightgray;
+    border-radius: 5px;
+}
