code refactoring by sk

--- a/src/Page/SearchPage.css
+++ b/src/Page/SearchPage.css
@@ -1,20 +1,16 @@
-#leftBox{
-    Width: 50%;
-    height: 90vh;
-    background-color: yellow;
-    float: left;
-    overflow: hidden;
+.leftBox{
+    width: 40%;
+    display: inline-block;
+    height: 100%;
 }
 
-#rightBox{
-    Width:50%;
-    height: 90vh;
-    background-color: blue;
-    float: left;
-
+.rightBox{
+    width:60%;
+    display: inline-block;
+    height: 100%;
 }
 
-#ListMapView{
+/* #ListMapView{
     height:83vh;    
     overflow: auto;
 }
@@ -27,4 +23,4 @@
 
 .ListMapView{
     padding:1em;
-}
+} */
