--- a/src/Components/Buttons/MyPageButton.css
+++ b/src/Components/Buttons/MyPageButton.css
@@ -3,3 +3,11 @@ img {
     width: 150px;
 }
   
+.myPageBtnWrapper {
+    display: inline-block;
+    /* margin-left: calc(100% - 1000px); */
+
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
