--- a/src/Components/Buttons/MyPageButton.css
+++ b/src/Components/Buttons/MyPageButton.css
@@ -10,21 +10,142 @@ img {
     border-radius: 6px;
 }
 
-.modal-background {
-    position: absolute;
-    right: 0;
+
+.modal {
+    position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     bottom: 0;
-    background-color: rgba(10, 10, 10, 0.86);
+    left: 0;
+    background: rgba(0, 0, 0, 0.6);
 }
 
-.modal-card {
-    margin: 0 auto;
-    display: block;
-    margin-top: 250px;
-    width: 300px;
-    height: 300px;
-    background-color: lightgray;
-    border-radius: 5px;
+.modal-login {
+    width: 480px;
+    height: 540px;
+    background-color: white;
+    position: relative;
+    box-sizing: border-box;
+    margin: 50px auto;
+    padding: 5%;
+    background: #fff;
 }
+
+.close {
+    color: gray;
+    font-size: 30px;
+    text-align: right;
+}
+
+.modal-title {
+    margin-top: 10px;
+    height: 80px;
+    font-size: 35px;
+    display: flex;
+    justify-content: center;
+}
+
+.modal-input {
+    margin-bottom: 3%;
+    width: 100%;
+    font-size: 18px;
+    padding: 10px;
+    height: 10%;
+    box-sizing: border-box;
+    border-width: 1px;
+    border-style: groove;
+    border-color: darkgray;
+}
+
+.modal-loginbtn {
+    margin-top: 10%;
+    width: 100%;
+    padding: 9px 12px;
+    outline: none;
+    box-sizing: border-box;
+    border-width: 1px;
+    border-style: groove;
+    border-color: darkgray;
+}
+
+.modal-loginbtn input::placeholder {
+    color: #999999;
+}
+
+/* 
+    .loginModal {
+      width: 480px;
+      height: 621px;
+      background-color: white;
+      position: relative;
+      box-sizing: border-box;
+      margin: 50px auto;
+      padding: 20px;
+      background: #fff;      //로그인 배경이다 
+  >
+      .close {
+        float: right;
+        font-size: 25px;
+      }
+      .modalContents {
+        margin: 0 auto;
+        width: 100%;
+        position: relative;
+        padding: 0 20px 32px;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+  >
+        .signinIcon {
+          width: 150px;
+          margin: 0 auto;
+        }
+  >
+        .loginId {
+          margin-top: 30px;
+          border-radius: 2px;
+          width: 100%;
+          height: 40px;
+          border: 1px solid #e5e5e5;
+          padding: 9px 12px;
+          outline: none;
+          box-sizing: border-box;
+        }
+        input::placeholder {
+          color: #999999;
+        }
+        .loginPw {
+          margin-top: 15px;
+          border-radius: 2px;
+          width: 100%;
+          height: 40px;
+          border: 1px solid #e5e5e5;
+          padding: 9px 12px;
+          outline: none;
+          box-sizing: border-box;
+        }
+  >
+        .loginMid {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          .autoLogin {
+            font-size: 12px;
+            color: #8d8d8d;
+            line-height: 3;
+          }
+        }
+        .loginBtn {
+          height: 40px;
+          font-size: 14px;
+          padding: 13px 30px;
+          cursor: pointer;
+          background-color: black;
+          color: white;
+          line-height: 1px;
+          margin-top: 20px;
+          margin-bottom: 12px;
+          border-radius: 3px;
+          border-style: none;
+        } */
