--- a/src/Page/SearchPage.css
+++ b/src/Page/SearchPage.css
@@ -10,7 +10,7 @@
     height: 100%;
 }
 
-/* #ListMapView{
+#ListMapView{
     height:83vh;    
     overflow: auto;
 }
@@ -23,4 +23,4 @@
 
 .ListMapView{
     padding:1em;
-} */
+}
