--- a/src/Components/Views/MyreservationView.css
+++ b/src/Components/Views/MyreservationView.css
@@ -22,3 +22,27 @@
 .options {
     display: inline;
 }
+
+.modify {
+    height: auto;
+    width: 60%;
+    text-align: center;
+    padding: 9px 12px;
+    box-sizing: border-box;
+    border-radius: 4%;
+    border-width: 1px;
+    border-style: groove;
+    border-color: darkgray;
+}
+
+.cancel {
+    height: auto;
+    width: 60%;
+    text-align: center;
+    padding: 9px 12px;
+    box-sizing: border-box;
+    border-radius: 4%;
+    border-width: 1px;
+    border-style: groove;
+    border-color: darkgray;
+}
