--- a/src/Components/Buttons/OrangeButton.css
+++ b/src/Components/Buttons/OrangeButton.css
@@ -2,7 +2,7 @@
     background-color: #FA5000;
     opacity: 0.7;
     border-radius: 10px;
-    width: 140px;
+    width: inherit;
     height: 45px;
     padding: 15px 32px;
     font-size: 38px;
