--- a/src/Components/Buttons/GrayButton.css
+++ b/src/Components/Buttons/GrayButton.css
@@ -4,8 +4,15 @@
     border-radius: 10px;
     width: 70px;
     height: 40px;
-    padding: 15px 32px;
+    padding-top: 18px;
+    padding-bottom: 8px;
+    padding-left: 32px;
+    padding-right: 32px;
     font-size: 25px;
+    color: black;
+    text-align: center;
     display: inline-block;
     margin-left: 20px;
+    box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+
 }
