--- a/src/Components/Views/DetailView.css
+++ b/src/Components/Views/DetailView.css
@@ -1,6 +1,10 @@
 .detailViewWrapper {
     text-align: left;
-    padding: 20px 120px;
+    margin-left: 8%;
+    margin-right: 8%;
+    max-width: 1280px;
+    margin-top: 180px;
+    position: relative
 }
 
 .detailInfoWrapper {
@@ -36,18 +40,22 @@ hr {
 }
 
 .floatingViewWrapper {
+    width: 48%;
     display: inline-block;
 }
 
 .reservationInfoWrapper {
-    border: 1px solid black;
+    border: 1px solid rgb(221, 221, 221);
     border-radius: 10px;
     position: fixed;
-    width: calc(50% - 120px);
-    top: 30%;
+    right: 8%;
+    top: 35%;
+    width: 30%;
+    box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+    padding: 25px;
 }
 
-.dateWrapper {
+.infoWrapper {
     padding: 20px 0;
 }
 
@@ -55,11 +63,24 @@ hr {
     margin-bottom: 10px;
 }
 
-
-.dateWrapper p {
+.infoWrapper p {
     display: inline-block;
+    width: 50px;
+    font-size: 25px;
 }
 
+.reserveBtn {
+    border-radius: 10px;
+    background-color: #FA5000;
+    opacity: 0.8;
+    height: 50px;
+    color: #ffffff;
+    text-align: center;
+    font-size: 30px;
+    letter-spacing: 4px;
+    padding-top: 10px;
+    box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+}
 
 
 
