--- a/src/Components/Views/LoginModal.css
+++ b/src/Components/Views/LoginModal.css
@@ -14,15 +14,19 @@
     background-color: white;
     position: relative;
     box-sizing: border-box;
-    margin: 50px auto;
+    margin: 15% auto;
     padding: 5%;
     background: #fff;
+    border-radius: 10px;
+    box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+    border: 1px solid rgb(221, 221, 221);
 }
 
 .close {
     color: gray;
-    font-size: 30px;
+    font-size: 40px;
     text-align: right;
+    cursor: pointer;
 }
 
 .modal-title {
@@ -43,18 +47,28 @@
     border-width: 1px;
     border-style: groove;
     border-color: darkgray;
+    border-radius: 10px;
+}
+
+.modal-input:focus {
+    outline: none;
+    border: 2px solid rgb(250, 80, 0, 0.8) ;
+    border-radius: 10px;
 }
 
 .modal-loginbtn {
+    border-radius: 10px;
+    background-color: #FA5000;
+    opacity: 0.8;
+    height: 50px;
+    color: #ffffff;
+    text-align: center;
+    font-size: 30px;
+    letter-spacing: 4px;
     margin-top: 10%;
     width: 100%;
-    padding: 9px 12px;
-    outline: none;
-    box-sizing: border-box;
-    border-radius: 4%;
-    border-width: 1px;
-    border-style: groove;
-    border-color: darkgray;
+    padding: 7px 12px;
+    border: none;
 }
 
 .modal-loginbtn input::placeholder {
