--- a/src/Components/Views/MyinformationView.css
+++ b/src/Components/Views/MyinformationView.css
@@ -1,23 +1,40 @@
 .grid {
-    padding-left: 5%;
-    border : 5px solid orange;
+    border: 1px solid rgb(221, 221, 221);
+    box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+    border-radius: 10px;
     text-align: left;
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: 2fr 2fr;
-    margin: 3%;
+    height: 200px;
+    padding: 20px 5%;
+}
+
+.myPageUserIcon {
+    width: 40px;
+    display: inline-block;
+}
+
+.userName {
+    display: inline-block;
+    font-size: 25px;
+    margin-left: 10px;
+    vertical-align: top;
+}
+
+.myInfoWrapper {
+    display: inline-block;
+    width: 70%;
 }
 
 .logoutbtn {
-    height: 30%;
+    display: inline-block;
+    width: 30%;
+    vertical-align: top;
+
     font-size: 17px;
-    width: 60%;
     padding: 9px 12px;
     box-sizing: border-box;
-    border-radius: 4%;
-    border-width: 1px;
-    border-style: groove;
-    border-color: darkgray;
+    border-radius: 10px;
+    background-color: #c4c4c4;
+    border: none;
 }
 
 .modal-loginbtn input::placeholder {
