--- a/src/Components/Views/SearchTagItem.css
+++ b/src/Components/Views/SearchTagItem.css
@@ -3,21 +3,22 @@
     background-color: #c4c4c4;
     display: inline-block;
     width: fit-content;
-    height: 40px;
-    margin-left: 10px;
-    padding-left: 10px;
-    padding-top: 7px;
+    height: 25px;
+    margin-left: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
 }
 
 .tagText {
-    font-size: 20px;
+    font-size: 15px;
     display: inline-block;
 }
 
 .tagBtn {
     display: inline-block;
     border: none;
-    width: 30px;
-    height: 30px;
+    width: 15px;
+    height: 15px;
     background-color: transparent;
 }
