--- a/src/Components/Views/SearchHeaderViewLeft.css
+++ b/src/Components/Views/SearchHeaderViewLeft.css
@@ -26,7 +26,7 @@
 .searchInput {
     display: inline-block;
     height: 42px;
-    width: 340px;
+    width: 400px;
     margin-left: 10px;
     margin-top: 10px;
     margin-bottom: 15px;
@@ -40,6 +40,7 @@ input {
 
 .plusBtn {
     display: inline-block;
+    border-radius: 25px;
     height: 50px;
     width: 50px;
     margin-left: 20px;
