--- a/src/Components/Views/SearchView.css
+++ b/src/Components/Views/SearchView.css
@@ -4,7 +4,8 @@
     height:100px;
     display: flex;
     margin: auto;
-    background-color:orange; 
+    background-color:#fa5000; 
+    opacity: 0.7;
     border-radius:15px
 }
 
