--- a/src/Page/MyPage.css
+++ b/src/Page/MyPage.css
@@ -1,6 +1,4 @@
-.myPageWrapper {
-    margin-top: 150px;
-    margin-left: 8%;
-    margin-right: 8%;
-    max-width: 1280px;
+.headwrapper {
+    padding-left: 30px;
+    padding-top: 20px;
 }
