--- a/src/Components/Views/MyinformationView.css
+++ b/src/Components/Views/MyinformationView.css
@@ -1,9 +1,11 @@
-.grid {
+.InfoBox {
+    margin: 3%;
+    width: auto;
     border: 1px solid rgb(221, 221, 221);
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
     border-radius: 10px;
     text-align: left;
-    height: 200px;
+    height: 130px;
     padding: 20px 5%;
 }
 
@@ -21,12 +23,12 @@
 
 .myInfoWrapper {
     display: inline-block;
-    width: 70%;
+    width: 80%;
 }
 
 .logoutbtn {
     display: inline-block;
-    width: 30%;
+    width: 20%;
     vertical-align: top;
 
     font-size: 17px;
