--- a/src/Components/Views/SearchView.css
+++ b/src/Components/Views/SearchView.css
@@ -1,6 +1,6 @@
 .inputWrapper {
     vertical-align: middle;
-    width:930px; 
+    width:1030px; 
     height:100px;
     display: flex;
     margin: auto;
@@ -18,9 +18,21 @@
 }
 
 .buttonWrapper {width:930px;
+    display: none;
     height:100px;
     display:flex;
     margin:auto
+}
+
+#buttonSearchInput{
+    width: 70px;
+    height: 70px;
+    border-radius: 35px;
+    background: url('./../../images/searchIcon_48px.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: white;
+    
 }
 
 button {width:200px; 
