Fetch button in SearchPage to the center

--- a/src/Components/Views/SearchHeaderViewLeft.css
+++ b/src/Components/Views/SearchHeaderViewLeft.css
@@ -43,6 +43,7 @@ input {
 
 .plusBtn {
     display: inline-block;
+    cursor: pointer;
     border-radius: 25px;
     height: 40px;
     width: 40px;
