--- a/src/Page/SearchPage.css
+++ b/src/Page/SearchPage.css
@@ -26,3 +26,11 @@
 .ListMapView{
     padding:3em;
 }
+
+.fetchButton{
+    cursor: pointer;
+    border-radius: 15px;
+    border: none;
+    background-color: #fc854d;
+    margin-left: calc(50% - 100px);
+}
