--- a/src/Components/Views/ListMapView.css
+++ b/src/Components/Views/ListMapView.css
@@ -1,28 +1,26 @@
 #body{
     border:2px solid black;
     grid-template-columns: fit-content(30%) fit-content(70%);
-    height: 25vh;
+    height: 20vh;
     display:flex;
     min-height: 100px;
     overflow: hidden;
 }
 
 #photo{
-    height:25vh;
+    height:20vh;
     width:30%;
     display: flex;
-    flex-direction:column;
+    align-items: center;
     justify-content: center;
-    background-color:pink
 }
 
-.center {
-    display: block;
-    text-align: center;
+.photo {
+    display:block;
     margin:auto;
-    align-content: center;
-    width:100%;
+    width: fit-content;
     border-radius: 10%;
+    max-width:100%;
 }
 
 #content{
@@ -68,3 +66,30 @@
 #utensils{
     white-space: pre-line;
 }
+
+/* Designing for scroll-bar */
+::-webkit-scrollbar {
+    width: 6px;
+}
+      
+/* Track */
+::-webkit-scrollbar-track {
+    background: gainsboro;
+    border-radius: 5px;
+}
+      
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #fc854d;
+    border-radius: 5px;
+}
+      
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+br {
+    display: block;
+    margin: 2px 0;
+ }
