--- a/src/Components/Items/IngredientItem.css
+++ b/src/Components/Items/IngredientItem.css
@@ -43,12 +43,14 @@
     width: 33px;
     height: 33px;
     margin-left: 15px;
+    cursor: pointer;
 }
 
 .minusIcon {
     width: 33px;
     height: 33px;
     margin-left: 10px; 
+    cursor: pointer;
 }
 
 
