--- a/src/Page/SearchPage.css
+++ b/src/Page/SearchPage.css
@@ -35,3 +35,25 @@
     background-color: #fc854d;
     margin-left: calc(50% - 100px);
 }
+
+/* Designing for scroll-bar */
+::-webkit-scrollbar {
+    width: 6px;
+}
+      
+/* Track */
+::-webkit-scrollbar-track {
+    background: gainsboro;
+    border-radius: 5px;
+}
+      
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #fc854d;
+    border-radius: 5px;
+}
+      
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
