--- a/src/Components/Views/QuestionView.css
+++ b/src/Components/Views/QuestionView.css
@@ -1,1 +1,81 @@
-/*  */
+.Qmodal {
+    z-index: 110;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.Qmodal-question {
+    width: 96%;
+    height: 95%;
+    background-color: white;
+    position: relative;
+    box-sizing: border-box;
+    margin: 1%;
+    margin-left: 2%;
+    padding: 2%;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+    border: 1px solid rgb(221, 221, 221);
+}
+
+.Qclose {
+    color: gray;
+    font-size: 40px;
+    cursor: pointer;
+    right: 2%;
+    top: 0%;
+    position: absolute;
+}
+
+.Qmodal-title {
+    font-size: 35px;
+    text-align: center;
+    margin-bottom: 1%;
+}
+
+.Qmodal-info {
+    margin: 2%;
+    display: inline-block;
+    text-align: center;
+}
+
+.Qmodal-buttons {
+    text-align: center;
+    margin-top: 10%;
+}
+
+.Qmodal-mypagebutton {
+    border-radius: 10px;
+    background-color: #FA5000;
+    opacity: 0.9;
+    height: 50px;
+    color: #ffffff;
+    text-align: center;
+    font-size: 30px;
+    letter-spacing: 4px;
+    width: 45%;
+    margin-right: 4%;
+    padding: 7px 12px;
+    border: none;
+}
+
+.Qmodal-grid {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-bottom: 3%;
+}
+
+.pictures {
+    width: 95%;
+    height: auto;
+}
+
+.descriptions {
+    font-size: 15px;
+}
