--- a/src/Components/Views/SearchView.css
+++ b/src/Components/Views/SearchView.css
@@ -38,7 +38,7 @@
     width: 70px;
     height: 70px;
     border-radius: 35px;
-    background: url('./../../images/searchIcon_48px.png');
+    font-size: 50px;
     background-position: center;
     background-repeat: no-repeat;
     background-color: white;
