--- a/src/Components/Views/MyinformationView.css
+++ b/src/Components/Views/MyinformationView.css
@@ -5,8 +5,8 @@
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
     border-radius: 10px;
     text-align: left;
-    height: 130px;
     padding: 20px 5%;
+    margin-top: 0%;
 }
 
 .myPageUserIcon {
@@ -16,7 +16,7 @@
 
 .userName {
     display: inline-block;
-    font-size: 25px;
+    font-size: 28px;
     margin-left: 10px;
     vertical-align: top;
 }
@@ -24,22 +24,31 @@
 .myInfoWrapper {
     display: inline-block;
     width: 80%;
-    height: 130px;
+    height: 135px;
 }
 
 .logoutbtn {
     display: inline-block;
     width: 20%;
     vertical-align: top;
-
-    font-size: 17px;
+    font-size: 120%;
     padding: 9px 12px;
     box-sizing: border-box;
     border-radius: 10px;
-    background-color: #c4c4c4;
+    background-color: #FA5000;
+    color: white;
     border: none;
+    box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+    opacity: 0.9;
 }
 
 .modal-loginbtn input::placeholder {
     color: #999999;
+}
+
+.h4-Info {
+    font-weight: 400;
+    font-size: 20px;
+    margin-top: 3%;
+    margin-bottom: 0%;
 }
