--- a/src/Components/Views/MyreservationView.css
+++ b/src/Components/Views/MyreservationView.css
@@ -6,7 +6,6 @@
     text-align: left;
     margin-top: 1%;
     padding: 20px 5%;
-    height: 130px;
 }
 
 .reservation_box_past {
@@ -17,7 +16,6 @@
     text-align: left;
     margin-top: 1%;
     padding: 20px 5%;
-    height: 130px;
 }
 
 .reservation h3 {
@@ -30,37 +28,32 @@
 .reservationWrapper {
     display: inline-block;
     width: 80%;
+    height: 135px;
 }
 
-.reservationButtons {
+.kitchen_name {
+    font-size: 28px;
+    margin-bottom: 5%;
+}
+
+.cancelbtn {
     display: inline-block;
     width: 20%;
-    vertical-align: baseline;
-}
-
-.options {
-    display: inline;
-}
-
-.modify {
-    display: block;
-    width: 100%;
-    font-size: 17px;
+    vertical-align: top;
+    font-size: 120%;
     padding: 9px 12px;
     box-sizing: border-box;
     border-radius: 10px;
-    background-color: #c4c4c4;
+    background-color: #FA5000;
+    color: white;
     border: none;
+    box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+    opacity: 0.9;
 }
 
-.cancel {
-    display: block;
-    width: 100%;
-    font-size: 17px;
-    padding: 9px 12px;
-    box-sizing: border-box;
-    border-radius: 10px;
-    background-color: #c4c4c4;
-    border: none;
-    margin-top: 10%;
+.h4-res {
+    font-weight: 400;
+    font-size: 20px;
+    margin-top: 3%;
+    margin-bottom: 0%;
 }
