--- a/src/Components/Views/MyinformationView.css
+++ b/src/Components/Views/MyinformationView.css
@@ -6,7 +6,7 @@
     border-radius: 10px;
     text-align: left;
     padding: 20px 5%;
-    margin-top: 0%;
+    margin-top: 20px;
 }
 
 .myPageUserIcon {
