--- a/src/Components/Views/ListMapView.css
+++ b/src/Components/Views/ListMapView.css
@@ -1,70 +1,72 @@
 #body{
-    border:2px solid black;
-    grid-template-columns: fit-content(30%) fit-content(70%);
-    height: auto;
-    display:flex;
-    min-height: 100px;
+    border-bottom :2px solid #c4c4c4;
     overflow: hidden;
+    padding: 10px 15px;
+    height: 180px;
 }
 
 #photo{
-    height:auto;
-    width:30%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    height: 90%;
+    width: 45%;
+    display: inline-block;
 }
 
-.photo {
-    display:block;
-    margin:auto;
-    width: fit-content;
-    border-radius: 10%;
-    max-width:100%;
+#photo img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
 }
 
 #content{
-    height:auto;
-    width:70%;
-    float:left;
-    display:flex;
-    flex-direction: column; 
-    grid-template-rows:fit-content(20%) fit-content(80%);
-    padding:1.2em;
+    width: calc(55% - 50px);
+    margin-left: 20px;
+    display: inline-block;
+    overflow: hidden;
+    height: 90%;
 }
 
+
 #name{
-    height:auto;
-    padding:.2em;
-    font-size: 20px;
+    font-size: 23px;
     cursor: pointer;
-    display:inline-block;
-    text-decoration: underline;
+    display: inline-block;
+}
+
+
+#price {
+    font-size: 14px;
+    background-color: #c4c4c4;
+    border-radius: 10px;
+    padding: 5px;
+    width: fit-content;
+    margin-top: 5px;
+    margin-bottom: 10px;;
 }
 
 #information{
-    height:auto;
-    min-height: 100px;
-    overflow: hidden;
     font-size: 15px;
 }
 
 .ingredients{
     display: inline-block;
-    padding-left: 1em
+    color: rgb(113, 113, 113);
 }
 
 .utensils{
     display: inline-block;
-    padding-left: 1em
+    color: rgb(113, 113, 113);
+    margin-right: 5px;
 }
 
 #ingredients{
     white-space: pre-line;
+    color: rgb(113, 113, 113);
 }
 
 #utensils{
     white-space: pre-line;
+    color: rgb(113, 113, 113);
 }
 
 br {
