--- a/src/Components/Views/MainHeaderView.css
+++ b/src/Components/Views/MainHeaderView.css
@@ -1,6 +1,18 @@
 .headerWrapper {
     padding: 0 30px;
-    padding-top: 20px;
+    padding-top: 10px;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    background-color: #ffffff;
+    width: 100%;
+    height: 100px;
+    margin-top:10px;
+}
+
+.searchHeader {
+    padding: 0 30px;
+    padding-top: 10px;
     position: fixed;
     top: 0;
     z-index: 100;
