--- a/src/Components/Views/SearchTagItem.css
+++ b/src/Components/Views/SearchTagItem.css
@@ -3,11 +3,10 @@
     background-color: #c4c4c4;
     display: inline-block;
     width: fit-content;
-    height: 30px;
+    height: 24px;
     margin-left: 5px;
     padding-left: 5px;
     padding-right: 5px;
-    padding-top: 2px;
 }
 
 .tagText {
@@ -24,4 +23,6 @@
     color: black;
     font-size: 12px;
     background-color: transparent;
+    vertical-align: top;
+    margin-top: 5px;
 }
