--- a/src/Components/Views/MyreservationView.css
+++ b/src/Components/Views/MyreservationView.css
@@ -44,7 +44,7 @@
     padding: 9px 12px;
     box-sizing: border-box;
     border-radius: 10px;
-    background-color: #FA5000;
+    background-color: #c4c4c4;
     color: white;
     border: none;
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
