--- a/src/Components/Views/ReserveModalView.css
+++ b/src/Components/Views/ReserveModalView.css
@@ -60,7 +60,7 @@
 .Rmodal-homebutton {
     margin-left: 4%;
     border-radius: 10px;
-    background-color: lightgray;
+    background-color: #c4c4c4;
     opacity: 0.9;
     height: 50px;
     color: #000000;
