--- a/src/Components/Views/MyinformationView.css
+++ b/src/Components/Views/MyinformationView.css
@@ -35,7 +35,7 @@
     padding: 9px 12px;
     box-sizing: border-box;
     border-radius: 10px;
-    background-color: #FA5000;
+    background-color: #c4c4cc;
     color: white;
     border: none;
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
