--- a/src/Components/Views/SearchView.css
+++ b/src/Components/Views/SearchView.css
@@ -45,9 +45,12 @@
     background-repeat: no-repeat;
     background-color: white;
     border: none;
+    margin-top: 15px;
+    margin-right: 15px;
 }
 
-button {width:200px; 
+#buttonSearchInputbutton {
+    width:200px; 
     height:50px;
     font-size:22px; 
     margin: auto; 
