reserve-modal change

--- a/src/Components/Views/MyinformationView.css
+++ b/src/Components/Views/MyinformationView.css
@@ -36,7 +36,7 @@
     box-sizing: border-box;
     border-radius: 10px;
     background-color: #c4c4cc;
-    color: white;
+    color: black;
     border: none;
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
     opacity: 0.9;
