--- a/src/Components/Views/MyreservationView.css
+++ b/src/Components/Views/MyreservationView.css
@@ -45,10 +45,10 @@
     box-sizing: border-box;
     border-radius: 10px;
     background-color: #c4c4c4;
-    color: white;
+    color: black;
     border: none;
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
-    /* opacity: 0.9; */
+    opacity: 0.9;
 }
 
 .h4-res {
